--- a/index.html
+++ b/index.html
@@ -1742,7 +1742,7 @@ window.addEventListener('load', () => {
 
     
 
-    // 確保所有錨點點擊時都關閉手機菜單
+    // 確保所有錨點點擊時都關閉手機菜單 //
 
     document.querySelectorAll('#mobile-menu a').forEach(link => {
 
