--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ atfone <span class="text-slate-600 font-light">ads</span>
 
 
 
-<a href="#contact" class="nav-link text-slate-700 hover:text-blue-600">聯絡我們</a>
+<a href="#cooperation" class="nav-link text-slate-700 hover:text-blue-600">聯絡我們</a>
 
 </nav>
 
@@ -542,7 +542,7 @@ atfone <span class="text-slate-600 font-light">ads</span>
 
 <!-- CTA Button -->
 
-<a href="#contact" class="hidden md:block px-6 py-2 text-white secondary-blue font-semibold rounded-full hover:bg-blue-600 transition duration-300 accent-shadow">
+<a href="#cooperation" class="hidden md:block px-6 py-2 text-white secondary-blue font-semibold rounded-full hover:bg-blue-600 transition duration-300 accent-shadow">
 
 免費諮詢
 
@@ -1400,126 +1400,203 @@ atfone ads | Comprehensive Media Strategy
 
 <!-- 8. 聯絡我們 Section (表單區塊) -->
 
-<section id="contact" class="py-20 md:py-32 primary-blue text-white">
+    <!-- Cooperation/Contact Form Section -->
 
-<div class="container mx-auto px-6">
+    <section id="cooperation" class="py-16 sm:py-24 primary-blue w-full">
 
-<!-- 標題調整 -->
+        <div class="max-w-xl mx-auto px-4 sm:px-6 lg:px-8">
 
-<h2 class="text-4xl md:text-5xl font-extrabold text-center mb-16">免費諮詢</h2>
+            <div class="text-center">
 
+                <h2 class="text-3xl font-extrabold tracking-tight text-white sm:text-4xl">
 
+                    合作洽詢表單
 
-<!-- 表單卡片 -->
+                </h2>
 
-<div class="max-w-3xl mx-auto bg-white p-8 md:p-12 rounded-xl shadow-2xl text-slate-800">
+                <p class="mt-4 text-lg leading-6 text-indigo-200">
 
-<p class="text-lg text-slate-600 mb-8 text-center font-medium">
+                    請填寫您的資訊和需求，我們將儘快與您聯繫。
 
-填寫下方資訊，讓我們的專業顧問團隊為您量身規劃高效益廣告策略。
+                </p>
 
-</p>
+            </div>
 
 
 
-<form id="consultation-form">
+            <div class="mt-12 bg-white p-8 rounded-xl shadow-2xl">
 
-<!-- 姓名 -->
+                <form id="contact-form" class="space-y-6">
 
-<div class="mb-5">
+                    <!-- Name -->
 
-<label for="name" class="block text-sm font-bold text-slate-700 mb-2">
+                    <div>
 
-<span class="primary-blue-text mr-1">*</span>姓名
+                        <label for="name" class="block text-sm font-medium text-gray-700">姓名 <span class="text-red-500">*</span></label>
 
-</label>
+                        <div class="mt-1">
 
-<input type="text" id="name" name="name" required class="w-full p-3 border border-slate-300 rounded-lg focus:border-blue-500 focus:ring-blue-500 transition duration-150" placeholder="請輸入您的姓名">
+                            <input type="text" name="姓名" id="name" autocomplete="name" required 
 
-</div>
+                                class="py-3 px-4 block w-full shadow-sm focus:ring-indigo-500 focus:border-indigo-500 border border-gray-300 rounded-lg">
 
+                        </div>
 
+                    </div>
 
-<!-- 電子信箱 -->
 
-<div class="mb-5">
 
-<label for="email" class="block text-sm font-bold text-slate-700 mb-2">
+                    <!-- Phone -->
 
-<span class="primary-blue-text mr-1">*</span>電子信箱
+                    <div>
 
-</label>
+                        <label for="phone" class="block text-sm font-medium text-gray-700">電話 <span class="text-red-500">*</span></label>
 
-<input type="email" id="email" name="email" required class="w-full p-3 border border-slate-300 rounded-lg focus:border-blue-500 focus:ring-blue-500 transition duration-150" placeholder="請輸入有效的電子信箱">
+                        <div class="mt-1">
 
-</div>
+                            <input type="tel" name="電話" id="phone" autocomplete="tel" required 
 
+                                class="py-3 px-4 block w-full shadow-sm focus:ring-indigo-500 focus:border-indigo-500 border border-gray-300 rounded-lg">
 
+                        </div>
 
-<!-- 聯絡電話 -->
+                    </div>
 
-<div class="mb-5">
 
-<label for="phone" class="block text-sm font-bold text-slate-700 mb-2">
 
-<span class="primary-blue-text mr-1">*</span>聯絡電話
+                    <!-- Email -->
 
-</label>
+                    <div>
 
-<input type="tel" id="phone" name="phone" required class="w-full p-3 border border-slate-300 rounded-lg focus:border-blue-500 focus:ring-blue-500 transition duration-150" placeholder="請輸入您的電話號碼">
+                        <label for="email" class="block text-sm font-medium text-gray-700">Email <span class="text-red-500">*</span></label>
 
-</div>
+                        <div class="mt-1">
 
+                            <input type="email" name="Email" id="email" autocomplete="email" required 
 
+                                class="py-3 px-4 block w-full shadow-sm focus:ring-indigo-500 focus:border-indigo-500 border border-gray-300 rounded-lg">
 
-<!-- 品牌/公司名稱 -->
+                        </div>
 
-<div class="mb-5">
+                    </div>
 
-<label for="company" class="block text-sm font-bold text-slate-700 mb-2">
 
-<span class="primary-blue-text mr-1">*</span>品牌/公司名稱
 
-</label>
+                    <!-- Company/Brand Name (Optional Field) -->
 
-<input type="text" id="company" name="company" required class="w-full p-3 border border-slate-300 rounded-lg focus:border-blue-500 focus:ring-blue-500 transition duration-150" placeholder="貴公司或品牌名稱">
+                    <div>
 
-</div>
+                        <label for="company" class="block text-sm font-medium text-gray-700">品牌/公司名稱</label>
 
+                        <div class="mt-1">
 
+                            <!-- 注意：name 屬性與 Google Sheet 欄位名稱一致 -->
 
-<!-- 品牌官網 (選填) -->
+                            <input type="text" name="品牌/公司名稱" id="company" autocomplete="organization" 
 
-<div class="mb-8">
+                                class="py-3 px-4 block w-full shadow-sm focus:ring-indigo-500 focus:border-indigo-500 border border-gray-300 rounded-lg">
 
-<label for="website" class="block text-sm font-bold text-slate-700 mb-2">
+                        </div>
 
-品牌官網 (選填)
+                    </div>
 
-</label>
+                    
 
-<input type="url" id="website" name="website" class="w-full p-3 border border-slate-300 rounded-lg focus:border-blue-500 focus:ring-blue-500 transition duration-150" placeholder="http://或https:// 網址">
+                    <!-- Advertising Budget (Optional Field) -->
 
-</div>
+                    <div>
 
+                        <label for="budget" class="block text-sm font-medium text-gray-700">廣告預算 (每月)</label>
 
+                        <div class="mt-1">
 
-<!-- 提交按鈕 -->
+                            <!-- 注意：name 屬性與 Google Sheet 欄位名稱一致 -->
 
-<button type="submit" class="w-full py-3 text-xl text-white secondary-blue font-bold rounded-xl hover:bg-blue-600 transition duration-300 transform hover:scale-105 shadow-lg">
+                            <select id="budget" name="廣告預算" 
 
-送出諮詢表單
+                                class="py-3 px-4 block w-full shadow-sm focus:ring-indigo-500 focus:border-indigo-500 border border-gray-300 bg-white rounded-lg">
 
-</button>
+                                <option value="" selected disabled>請選擇</option>
 
-</form>
+                                <option value="3萬以下">NT$ 3 萬以下</option>
 
-</div>
+                                <option value="3萬～5萬">NT$ 3 萬～5 萬</option>
 
-</div>
+                                <option value="5萬～10萬">NT$ 5 萬～10 萬</option>
 
-</section>
+                                <option value="10萬~30萬">NT$ 10 萬~30 萬</option>
 
+                                <option value="30萬以上">NT$ 30 萬以上</option>
+
+                            </select>
+
+                        </div>
+
+                    </div>
+
+
+
+                    <!-- Media of Interest / Specific Needs (Optional Field) -->
+
+                    <div>
+
+                        <label for="media" class="block text-sm font-medium text-gray-700">想了解媒體/具體需求</label>
+
+                        <div class="mt-1">
+
+                            <!-- 注意：name 屬性與 Google Sheet 欄位名稱一致 -->
+
+                            <textarea id="media" name="想了解媒體" rows="4" 
+
+                                class="py-3 px-4 block w-full shadow-sm focus:ring-indigo-500 focus:border-indigo-500 border border-gray-300 rounded-lg" 
+
+                                placeholder="例如：想了解 YouTube 廣告投放，預計下個月開始執行..."></textarea>
+
+                        </div>
+
+                    </div>
+
+
+
+                    <!-- Submit Button and Status Message -->
+
+                    <div>
+
+                        <button type="submit" id="submit-button" 
+
+                            class="w-full inline-flex items-center justify-center px-6 py-3 border border-transparent rounded-full shadow-sm text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition duration-150 ease-in-out">
+
+                            <span id="button-text">送出洽詢</span>
+
+                            <span id="loading-spinner" class="hidden ml-2">
+
+                                <svg class="animate-spin h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+
+                                    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+
+                                    <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+
+                                </svg>
+
+                            </span>
+
+                        </button>
+
+                    </div>
+
+
+
+                    <!-- Message Box for Alert replacement -->
+
+                    <div id="form-message" class="text-center p-3 rounded-lg hidden" role="alert"></div>
+
+                </form>
+
+            </div>
+
+        </div>
+
+    </section>
 
 
 </main>
@@ -1664,72 +1741,6 @@ function hideMessageModal() {
 
 }
 
-
-
-// 表單提交處理
-
-document.getElementById('consultation-form').addEventListener('submit', function(event) {
-
-    event.preventDefault(); // 阻止表單的默認提交行為
-
-
-
-    const name = document.getElementById('name').value.trim();
-
-    const company = document.getElementById('company').value.trim();
-
-    const email = document.getElementById('email').value.trim();
-
-    const phone = document.getElementById('phone').value.trim();
-
-
-
-    // 簡單驗證必填欄位
-
-    if (!name || !company || !email || !phone) {
-
-        showMessageModal('請填寫所有標記 * 號的必填欄位。');
-
-        return;
-
-    }
-
-
-
-    // 模擬表單提交成功的邏輯
-
-    const submissionData = {
-
-        name: name,
-
-        company: company,
-
-        email: email,
-
-        phone: phone,
-
-        website: document.getElementById('website').value.trim(),
-
-    };
-
-
-
-    console.log("Simulated Form Submission Data:", submissionData);
-
-
-
-    showMessageModal(`感謝 ${name} (來自 ${company}) 提交的諮詢！\n我們的專業團隊將盡快與您聯繫。`);
-
-
-
-    // 重設表單
-
-    this.reset();
-
-});
-
-
-
 // 確保頁面載入後，Lucide Icons 被正確渲染
 
 window.addEventListener('load', () => {
@@ -1753,7 +1764,179 @@ window.addEventListener('load', () => {
 });
 
 </script>
+    <script>
 
+        document.addEventListener('DOMContentLoaded', function() {
+
+            const form = document.getElementById('contact-form');
+
+            const submitButton = document.getElementById('submit-button');
+
+            const buttonText = document.getElementById('button-text');
+
+            const loadingSpinner = document.getElementById('loading-spinner');
+
+            const formMessage = document.getElementById('form-message');
+
+
+
+            // !!! 替換此 URL 為您的 Google Apps Script Web App 或 Google Forms 端點 !!!
+
+            // 已經更新為您提供的 Web App URL
+
+            const GOOGLE_SHEET_ENDPOINT = "https://script.google.com/macros/s/AKfycbxbIu5QjUZUi5TK4_GT0NxG0V9YYs8NaT9yLVwIgYGv6rvknEefnPGn4yUagrfJQ4I/exec"; 
+
+            // --------------------------------------------------------------------------
+
+
+
+            // Helper function to show message (replacing alert())
+
+            function showMessage(message, type = 'success') {
+
+                formMessage.textContent = message;
+
+                formMessage.classList.remove('hidden', 'bg-red-100', 'text-red-700', 'bg-green-100', 'text-green-700');
+
+                if (type === 'success') {
+
+                    formMessage.classList.add('bg-green-100', 'text-green-700');
+
+                } else if (type === 'error') {
+
+                    formMessage.classList.add('bg-red-100', 'text-red-700');
+
+                }
+
+                // Auto-hide after 5 seconds
+
+                setTimeout(() => {
+
+                    formMessage.classList.add('hidden');
+
+                }, 5000);
+
+            }
+
+
+
+            // Function to set loading state
+
+            function setLoading(isLoading) {
+
+                submitButton.disabled = isLoading;
+
+                if (isLoading) {
+
+                    buttonText.textContent = '送出中...';
+
+                    loadingSpinner.classList.remove('hidden');
+
+                } else {
+
+                    buttonText.textContent = '送出洽詢';
+
+                    loadingSpinner.classList.add('hidden');
+
+                }
+
+            }
+
+
+
+            form.addEventListener('submit', async function(e) {
+
+                e.preventDefault();
+
+                setLoading(true);
+
+                formMessage.classList.add('hidden'); // Hide previous message
+
+
+
+                if (GOOGLE_SHEET_ENDPOINT === "YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL_HERE" || !GOOGLE_SHEET_ENDPOINT) {
+
+                    // Safety check if the user forgot to replace the URL (shouldn't happen now)
+
+                    showMessage('錯誤: 請先在程式碼中設定 GOOGLE_SHEET_ENDPOINT 變數，才能啟用表單提交功能。', 'error');
+
+                    setLoading(false);
+
+                    return;
+
+                }
+
+
+
+                // Collect form data
+
+                const formData = new FormData(form);
+
+                const data = {};
+
+                formData.forEach((value, key) => {
+
+                    // key 是欄位的 name 屬性 (例如: "姓名", "電話")
+
+                    data[key] = value;
+
+                });
+
+
+
+                // Convert data to URLSearchParams for submission
+
+                const params = new URLSearchParams(data);
+
+
+
+                try {
+
+                    // Fetch API 提交資料到 Google Apps Script
+
+                    const response = await fetch(GOOGLE_SHEET_ENDPOINT, {
+
+                        method: 'POST',
+
+                        mode: 'no-cors', // 啟用 CORS 繞過，這是 Apps Script 常見的設定
+
+                        headers: {
+
+                            'Content-Type': 'application/x-www-form-urlencoded',
+
+                        },
+
+                        body: params.toString()
+
+                    });
+
+
+
+                    // 由於 'no-cors' 模式無法讀取回應狀態，我們假設 fetch 成功即為 Apps Script 成功接收
+
+                    showMessage('✅ 洽詢已成功送出！感謝您的填寫，資料已傳送到 Google Sheet。', 'success');
+
+                    form.reset(); // 清空表單
+
+
+
+                } catch (error) {
+
+                    console.error('Submission Error:', error);
+
+                    showMessage('❌ 提交失敗！請檢查網路連線或 GOOGLE_SHEET_ENDPOINT 是否正確。', 'error');
+
+                } finally {
+
+                    setLoading(false);
+
+                }
+
+            });
+
+        });
+
+    </script>
 </body>
 
 </html>
